--- a/ConsoleApp1/assignmentPart1.csproj
+++ b/ConsoleApp1/assignmentPart1.csproj
@@ -45,6 +45,8 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SetNameCommand.cs" />
+    <Compile Include="StatusCommand.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
